DSS Metric label alignment issue in case of big text or denomination is fixed

--- a/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
+++ b/frontend/micro-ui/web/micro-ui-internals/packages/css/src/pages/employee/dss.scss
@@ -14,7 +14,7 @@ margin-right:25px;
 .dss-header-label{
   font-weight: 500 !important;
   font-size: 22px !important;
-  white-space: pre;
+  white-space: pre-line;
 }
 .dss-switch-tab-wrapper{
     cursor:pointer;
